# nova-api

./: .gitignore  Cargo.toml  Cargo.toml.template  README.md  buf.gen.yaml  buf.work.yaml  buf.yaml  build.rs  publish.sh
.gitea/workflows/: buf.yaml  rust.yaml
go/google/rpc/: code.pb.go  error_details.pb.go  http.pb.go  status.pb.go
go/keystore/v1/: keystore.pb.go
go/raft/v1/: metadata.pb.go  raft.pb.go
pleiades/: buf.yaml
pleiades/google/: buf.yaml
pleiades/keystore/v1/: keystore.proto
pleiades/raft/v1/: metadata.proto  raft.proto
raft/v1/: raft.proto
rust/: Cargo.toml
rust/.github/: build.yaml
rust/src/: confchange.rs  confstate.rs  google.rpc.rs  google.rpc.serde.rs  keystore.v1.rs  keystore.v1.serde.rs  lib.rs  raft.v1.rs  raft.v1.serde.rs  raft.v1.tonic.rs
rust/src/protos/: buf_yaml.rs  mod.desc  mod.rs  raft.rs
