[package]
name = "nova-api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
pbjson = "0.6"
pbjson-types = "0.6"
prost = "0.12"
prost-types = "0.12"
serde = "1.0"

[build-dependencies]
pbjson-build = "0.6"
prost-build = "0.12"

[features]
default = []
## @@protoc_insertion_point(features)