[package]
name = "nova-api"
authors = ["Sienna Lloyd", "Pleiades Authors"]
description = "Protocol buffers, API definitions, and generated code for the Nova Engine"
license = "GPL-3.0-only"
repository = "https://review.r3t.io/nova-engine/api"
version = "0.1.1"
edition = "2021"
publish = true

[lib]
crate-type = ["lib"]
path = "rust/src/lib.rs"

[features]
default = ["protobuf-codec"]
protobuf-codec = ["protobuf-build/protobuf-codec", "bytes", "protobuf/bytes"]
prost-codec = ["protobuf-build/prost-codec", "prost", "lazy_static"]

[build-dependencies]
protobuf-build = { version = "0.15", default-features = false }
toml_edit = "0.20.4"

[dependencies]
bytes = { version = "1", optional = true }
lazy_static = { version = "1", optional = true }
prost = { version = "0.12", optional = true }
protobuf = "2"
